<resources>
    <string name="app_name">Moviedb</string>
    <string name="title">Usa nuestra base de datos para conocer más de tus pelis favoritas</string>
    <string name="advice1">Intuitiva</string>
    <string name="advice2">Fácil de registrarte</string>
    <string name="advice3">Toda tu información siempre disponible</string>
    <string name="continue_text">continuar</string>
    <string name="login_input_name">Escribe tu nombre</string>
    <string name="login_input_email">correo electrónico</string>
    <string name="login_input_password">contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="favoritos">Favoritos</string>
    <string name="imagen_de_portada_description">Imagen de portada</string>
</resources>