<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LandingPageFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_landing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:shapeAppearanceOverlay="@style/circular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/main_icon"/>

    <TextView
        android:id="@+id/tvLanding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/icon_landing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.05"/>

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/tvLanding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            app:srcCompat="@drawable/done"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice1"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/layout_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            app:srcCompat="@drawable/done"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice2"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/layout_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            app:srcCompat="@drawable/done"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice3"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red"
        android:text="@string/continue_text"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_3"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>